<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResults"
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:text="@string/display"
        android:gravity="end|bottom"
        android:textSize="40sp"
        android:background="@color/off_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="4dp">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="btnClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="operatorClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="btnClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="operatorClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="btnClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="btnClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="operatorClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="dotClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="btnClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:onClick="operatorClickHandler"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:onClick="equalsClickHandler"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>